--- a/record1.html
+++ b/record1.html
@@ -49,8 +49,8 @@
     <h2><center>Price list</center></h2>
     <table border="3" width="50%" align="center">
     <tr>
-    <th style="background-color: white; font-weight: bold;">item</th>
-    <th style="background-color: white; font-weight: bold;">price</th>
+    <th style="background-color: white; font-weight: bold;">ITEM</th>
+    <th style="background-color: white; font-weight: bold;">PRICE</th>
     </tr>
     
     <tr>
@@ -64,7 +64,7 @@
     </tr>
     
     <tr>
-    <td style="background-color:silver">Snickrs</td>
+    <td style="background-color:silver">Snickers</td>
     <td style="background-color:silver">5$</td>
     </tr>
  
@@ -82,5 +82,5 @@
    </table>
 
 </body>
-</head>
+</html>
 </html>
