--- a/record2/home.html
+++ b/record2/home.html
@@ -3,7 +3,7 @@
 <head>
 <title>link</title>
 </head>
-<body style="background-color:lightblue;">
+<body bgcolor="lightblue">
 
 <center><img src="/home/user/Mohathis/images/kmct.jpeg" height="200" width="400">
 
