--- a/record1.html
+++ b/record1.html
@@ -8,8 +8,7 @@
 
 </style>
 
-<div style="text-align: center;">
-<img src="/home/user/Mohathis/images/ivory.jpg" width="300px" height="300px">
+<center><img src="/home/user/Mohathis/images/ivory.jpg" width="300px" height="300px"></center>
 </div>
 <h1><center>Ivory Inn Store</h1>
 
