--- a/record8.html
+++ b/record8.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>mouse</title>
+<title>mouse color</title>
 </head>
 <body>
 <center><button type="button" onclick="clrbtn();">change background color</button></center>
